add folder table and allow user to create folders