@@ -1,5 +1,8 @@
 package com.xinyue.atelier.service;
 
+import com.xinyue.atelier.PatternOrigin;
+import com.xinyue.atelier.model.Folder;
+import com.xinyue.atelier.respository.FolderRepo;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -7,10 +10,15 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.UUID;
 
 @Service
 public class LocalFileStorageService implements FileStorageService {
+
+    private final FolderRepo folderRepo;
+
+    public LocalFileStorageService(FolderRepo folderRepo) {
+        this.folderRepo = folderRepo;
+    }
 
     public static final String UPLOAD_DIR = "uploads";
 
@@ -30,14 +38,38 @@ public class LocalFileStorageService implements FileStorageService {
         }
     }
 
-    public Path createDirectory(String folderName) {
+    public Folder createDirectory(
+            String folderName,
+            String title,
+            String origin,
+            Integer level,
+            MultipartFile image
+    ) {
         try {
-            Path uploadPath = Paths.get(UPLOAD_DIR);
-            Files.createDirectories(uploadPath);
-            Path dirPath = uploadPath.resolve(folderName);
-            return  Files.createDirectories(dirPath);
+            Path uploadPath = Path.of(UPLOAD_DIR);
+            if (!Files.exists(uploadPath)) {
+                Files.createDirectories(uploadPath);
+            }
+
+            Path folderPath = uploadPath.resolve(folderName);
+            if (!Files.exists(folderPath)) {
+                Files.createDirectories(folderPath);
+            }
+
+            String imageFileName = image.getOriginalFilename();
+            Path imagePath = folderPath.resolve(imageFileName);
+
+            Folder folder = new Folder();
+            folder.setFolderName(folderName);
+            folder.setFolderName(title);
+            folder.setOrigin(PatternOrigin.valueOf(origin));
+            folder.setLevel(level);
+            folder.setImagePath(imagePath.toString());
+
+            return folderRepo.save(folder);
+
         } catch (IOException e) {
-            throw new RuntimeException("Failed to create directory", e);
+            throw new RuntimeException("Failed to create folder or save image: " + folderName, e);
         }
     }
 }
